Liberty nfp devstack.

--- a/local.conf
+++ b/local.conf
@@ -22,7 +22,7 @@ MYSQL_PASSWORD=openstack
 RABBIT_PASSWORD=openstack
 SERVICE_PASSWORD=admin_pass
 SERVICE_TOKEN=admin
-HOST_IP=192.168.100.135
+HOST_IP=192.168.100.107
 
 Q_PLUGIN=ml2
 Q_L3_ENABLED=True
@@ -33,7 +33,7 @@ TENANT_VLAN_RANGE=1100:2999
 
 enable_service q-fwaas
 enable_service q-lbaas
-enable_plugin neutron-vpnaas https://git.openstack.org/openstack/neutron-vpnaas master
+enable_plugin neutron-vpnaas https://git.openstack.org/openstack/neutron-vpnaas stable/liberty
 
 Q_SERVICE_PLUGIN_CLASSES=neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,group_policy,ncp
 #GIT_BASE=http://github.com
@@ -41,11 +41,11 @@ Q_SERVICE_PLUGIN_CLASSES=neutron.services.l3_router.l3_router_plugin.L3RouterPlu
 GIT_BASE=git://git.openstack.org
 
 GBPSERVICE_REPO=https://github.com/oneconvergence/group-based-policy.git
-GBPSERVICE_BRANCH=mitaka_21st_march_base
+GBPSERVICE_BRANCH=nfp-integration
 
 
 GBPCLIENT_REPO=${GIT_BASE}/openstack/python-group-based-policy-client.git
-GBPCLIENT_BRANCH=master
+GBPCLIENT_BRANCH=stable/liberty
 
 GBPUI_REPO=${GIT_BASE}/openstack/group-based-policy-ui.git
 GBPUI_BRANCH=master
@@ -54,17 +54,17 @@ GBPHEAT_REPO=${GIT_BASE}/openstack/group-based-policy-automation.git
 GBPHEAT_BRANCH=master
 
 # Github's Branch
-GLANCE_BRANCH=master
-HORIZON_BRANCH=master
-KEYSTONE_BRANCH=master
-KESYTONECLIENT_BRANCH=master
-NOVA_BRANCH=master
-NOVACLIENT_BRANCH=master
-NEUTRON_BRANCH=master
-HEAT_BRANCH=master
-CEILOMETER_BRANCH=master
-SWIFT_BRANCH=master
-CINDER_BRANCH=master
+GLANCE_BRANCH=stable/liberty
+HORIZON_BRANCH=stable/liberty
+KEYSTONE_BRANCH=stable/liberty
+KESYTONECLIENT_BRANCH=stable/liberty
+NOVA_BRANCH=stable/liberty
+NOVACLIENT_BRANCH=stable/liberty
+NEUTRON_BRANCH=stable/liberty
+HEAT_BRANCH=stable/liberty
+CEILOMETER_BRANCH=stable/liberty
+SWIFT_BRANCH=stable/liberty
+CINDER_BRANCH=stable/liberty
 enable_service n-cauth n-novnc 
 disable_service n-net tempest
 ENABLED_SERVICES+=,q-svc,q-agt,q-dhcp,q-l3,q-meta,q-metering,neutron
