--- a/local.conf
+++ b/local.conf
@@ -48,10 +48,10 @@ GBPCLIENT_REPO=${GIT_BASE}/openstack/python-group-based-policy-client.git
 GBPCLIENT_BRANCH=stable/liberty
 
 GBPUI_REPO=${GIT_BASE}/openstack/group-based-policy-ui.git
-GBPUI_BRANCH=master
+GBPUI_BRANCH=stable/liberty
 
 GBPHEAT_REPO=${GIT_BASE}/openstack/group-based-policy-automation.git
-GBPHEAT_BRANCH=master
+GBPHEAT_BRANCH=stable/liberty
 
 # Github's Branch
 GLANCE_BRANCH=stable/liberty
