Commited code related with stable/mitaka

--- a/local.conf
+++ b/local.conf
@@ -1,7 +1,7 @@
 [[local|localrc]]
 DEST=/opt/stack
-ConfiguratorQcow2Image=/home/stack/devstack/configurator
-VyosQcow2Image=/home/stack/devstack/vyos.qcow2
+ConfiguratorQcow2Image=/home/stack/service_images/configurator-mitaka-master.qcow2
+VyosQcow2Image=/home/stack/service_images/vyos.qcow2
 EXT_NET_NAME=ext-net
 EXT_NET_SUBNET_NAME=ext-net-subnet
 EXT_NET_GATEWAY=192.168.102.254
@@ -33,7 +33,7 @@ TENANT_VLAN_RANGE=1100:2999
 
 enable_service q-fwaas
 enable_service q-lbaas
-enable_plugin neutron-vpnaas https://git.openstack.org/openstack/neutron-vpnaas master
+enable_plugin neutron-vpnaas https://git.openstack.org/openstack/neutron-vpnaas stable/mitaka
 
 Q_SERVICE_PLUGIN_CLASSES=neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,group_policy,ncp
 #GIT_BASE=http://github.com
@@ -54,17 +54,17 @@ GBPHEAT_REPO=${GIT_BASE}/openstack/group-based-policy-automation.git
 GBPHEAT_BRANCH=master
 
 # Github's Branch
-GLANCE_BRANCH=master
-HORIZON_BRANCH=master
-KEYSTONE_BRANCH=master
-KESYTONECLIENT_BRANCH=master
-NOVA_BRANCH=master
-NOVACLIENT_BRANCH=master
-NEUTRON_BRANCH=master
-HEAT_BRANCH=master
-CEILOMETER_BRANCH=master
-SWIFT_BRANCH=master
-CINDER_BRANCH=master
+GLANCE_BRANCH=stable/mitaka
+HORIZON_BRANCH=stable/mitaka
+KEYSTONE_BRANCH=stable/mitaka
+KESYTONECLIENT_BRANCH=stable/mitaka
+NOVA_BRANCH=stable/mitaka
+NOVACLIENT_BRANCH=stable/mitaka
+NEUTRON_BRANCH=stable/mitaka
+HEAT_BRANCH=stable/mitaka
+CEILOMETER_BRANCH=stable/mitaka
+SWIFT_BRANCH=stable/mitaka
+CINDER_BRANCH=stable/mitaka
 enable_service n-cauth n-novnc 
 disable_service n-net tempest
 ENABLED_SERVICES+=,q-svc,q-agt,q-dhcp,q-l3,q-meta,q-metering,neutron
