Commited changes related with mitaka release

--- a/local.conf
+++ b/local.conf
@@ -22,7 +22,7 @@ MYSQL_PASSWORD=openstack
 RABBIT_PASSWORD=openstack
 SERVICE_PASSWORD=admin_pass
 SERVICE_TOKEN=admin
-HOST_IP=192.168.100.135
+HOST_IP=192.168.100.108
 
 Q_PLUGIN=ml2
 Q_L3_ENABLED=True
@@ -70,7 +70,7 @@ disable_service n-net tempest
 ENABLED_SERVICES+=,q-svc,q-agt,q-dhcp,q-l3,q-meta,q-metering,neutron
 
 enable_service  n-cpu n-api-meta n-metadata n-osapi_compute c-vol c-api n-api n-cert n-obj n-cond n-sch cinder c-bak
-enable_service group-policy,orchestrator,proxy,config_agent,config_agent_proxy
+enable_service group-policy,orchestrator,proxy,proxy_agent,config_orch
 
 
 # Heat - Orchestration Service
