--- a/local.conf
+++ b/local.conf
@@ -39,7 +39,7 @@ Q_SERVICE_PLUGIN_CLASSES=neutron.services.l3_router.l3_router_plugin.L3RouterPlu
 GIT_BASE=git://git.openstack.org
 
 GBPSERVICE_REPO=https://github.com/oneconvergence/group-based-policy.git
-GBPSERVICE_BRANCH=mitaka-base-mode-patch-submission
+GBPSERVICE_BRANCH=mitaka_21st_march_base
 
 
 GBPCLIENT_REPO=${GIT_BASE}/openstack/python-group-based-policy-client.git
@@ -68,7 +68,7 @@ disable_service n-net tempest
 ENABLED_SERVICES+=,q-svc,q-agt,q-dhcp,q-l3,q-meta,q-metering,neutron
 
 enable_service  n-cpu n-api-meta n-metadata n-osapi_compute c-vol c-api n-api n-cert n-obj n-cond n-sch cinder c-bak
-enable_service group-policy,orchestrator,proxy,config_agent_proxy,base_configurator
+enable_service group-policy,orchestrator,proxy,proxy_agent,config_orch,base_configurator
 
 
 # Heat - Orchestration Service
