Adding Haproxy support in advance mitaka

--- a/local.conf
+++ b/local.conf
@@ -2,6 +2,7 @@
 DEST=/opt/stack
 ConfiguratorQcow2Image=/home/stack/service_images/configurator-mitaka-master.qcow2
 VyosQcow2Image=/home/stack/service_images/vyos.qcow2
+HaproxyQcow2Image=/home/stack/service_images/haproxy.qcow2
 EXT_NET_NAME=ext-net
 EXT_NET_SUBNET_NAME=ext-net-subnet
 EXT_NET_GATEWAY=192.168.102.254
