Reverted back changes related eith nfp firewall plugin

--- a/local.conf
+++ b/local.conf
@@ -93,6 +93,11 @@ allow_duplicate_networks = True
 [[post-config|/etc/heat/heat.conf]]
 [DEFAULT]
 plugin_dirs=/opt/stack/gbpautomation/gbpautomation/heat
+
+[[post-config|/etc/neutron/fwaas_driver.ini]]
+[fwaas]
+driver = neutron_fwaas.services.firewall.drivers.linux.oc_noop_firewall_driver.oc_fwaas.NoOpFwaasDriver
+
 [[post-config|/etc/neutron/neutron.conf]]
 
 [keystone_authtoken]
