--- a/local.conf
+++ b/local.conf
@@ -1,5 +1,6 @@
 [[local|localrc]]
 DEST=/opt/stack
+#IMAGE_URLS+=<IMAGE URI, IMAGE EXTENSION SHOULD BE .img>
 
 # Logging
 LOGFILE=$DEST/logs/stack.sh.log
@@ -31,9 +32,13 @@ Q_SERVICE_PLUGIN_CLASSES=neutron.services.l3_router.l3_router_plugin.L3RouterPlu
 
 GIT_BASE=git://git.openstack.org
 
+# OC repo
 GBPSERVICE_REPO=https://github.com/oneconvergence/group-based-policy.git
 GBPSERVICE_BRANCH=mitaka_21st_march_base
 
+# Openstack repo
+#GBPSERVICE_REPO=https://git.openstack.org/openstack/group-based-policy
+#GBPSERVICE_BRANCH=refs/changes/85/298385/37
 
 GBPCLIENT_REPO=${GIT_BASE}/openstack/python-group-based-policy-client.git
 GBPCLIENT_BRANCH=master
