--- a/local.conf
+++ b/local.conf
@@ -66,7 +66,7 @@ disable_service n-net tempest
 ENABLED_SERVICES+=,q-svc,q-agt,q-dhcp,q-l3,q-meta,q-metering,neutron
 
 enable_service  n-cpu n-api-meta n-metadata n-osapi_compute c-vol c-api n-api n-cert n-obj n-cond n-sch cinder c-bak
-enable_service group-policy,orchestrator,proxy,proxy_agent,config_orch,base_configurator
+enable_service group-policy,orchestrator,proxy,proxy_agent,base_configurator
 
 
 # Heat - Orchestration Service
