--- a/local.conf
+++ b/local.conf
@@ -13,7 +13,7 @@ MYSQL_PASSWORD=openstack
 RABBIT_PASSWORD=openstack
 SERVICE_PASSWORD=admin_pass
 SERVICE_TOKEN=admin
-HOST_IP=192.168.100.135
+HOST_IP=192.168.2.91
 
 Q_PLUGIN=ml2
 Q_L3_ENABLED=True
@@ -45,7 +45,7 @@ enable_service  n-cpu n-api-meta n-metadata n-osapi_compute c-vol c-api n-api n-
 
 enable_plugin gbp https://git.openstack.org/openstack/group-based-policy master
 
-enable_plugin nfp-plugin https://github.com/oneconvergence/nfp-devstack.git base-mode-mitaka
+enable_plugin gbp/gbpservice/nfp https://github.com/oneconvergence/group-based-policy mitaka_21st_march_base_with_devstack
 
 # Heat - Orchestration Service
 ENABLED_SERVICES+=,heat,h-api,h-api-cfn,h-api-cw,h-eng,heat-api-cloudwatch
