--- a/local.conf
+++ b/local.conf
@@ -13,89 +13,14 @@ MYSQL_PASSWORD=openstack
 RABBIT_PASSWORD=openstack
 SERVICE_PASSWORD=admin_pass
 SERVICE_TOKEN=admin
-HOST_IP=192.168.2.91
+HOST_IP=192.168.100.106
 
-Q_PLUGIN=ml2
-Q_L3_ENABLED=True
-PUBLIC_INTERFACE=eth0
+enable_plugin gbp https://git.openstack.org/openstack/group-based-policy refs/changes/45/309145/25
+GBPSERVICE_BRANCH=refs/changes/45/309145/18
+ENABLE_NFP=True
 
-ENABLE_TENANT_VLANS=True
-TENANT_VLAN_RANGE=1100:2999
+#e.g IMAGE_URLS+=http://192.168.6.1/images/cirros-0.3.0-x86_64-disk.img #image extenson should be .img OR img.gz
+#IMAGE_URLS+=
 
-
-
-# Github's Branch
-GLANCE_BRANCH=stable/mitaka
-HORIZON_BRANCH=stable/mitaka
-KEYSTONE_BRANCH=stable/mitaka
-KESYTONECLIENT_BRANCH=stable/mitaka
-NOVA_BRANCH=stable/mitaka
-NOVACLIENT_BRANCH=stable/mitaka
-NEUTRON_BRANCH=stable/mitaka
-HEAT_BRANCH=stable/mitaka
-CEILOMETER_BRANCH=stable/mitaka
-SWIFT_BRANCH=stable/mitaka
-CINDER_BRANCH=stable/mitaka
-enable_service n-cauth n-novnc 
-disable_service n-net tempest
-ENABLED_SERVICES+=,q-svc,q-agt,q-dhcp,q-l3,q-meta,q-metering,neutron
-
-enable_service  n-cpu n-api-meta n-metadata n-osapi_compute c-vol c-api n-api n-cert n-obj n-cond n-sch cinder c-bak
-
-
-enable_plugin gbp https://git.openstack.org/openstack/group-based-policy master
-
-enable_plugin gbp/gbpservice/nfp https://github.com/oneconvergence/group-based-policy mitaka_21st_march_base_with_devstack
-
-# Heat - Orchestration Service
-ENABLED_SERVICES+=,heat,h-api,h-api-cfn,h-api-cw,h-eng,heat-api-cloudwatch
-#HEAT_STANDALONE=True
-
-SWIFT_HASH=66a3d6b56c1f479c8b4e70ab5c2000f5
-
-SWIFT_REPLICAS=1
-
-SWIFT_DATA_DIR=$DEST/data
-
-SCHEDULER=nova.scheduler.filter_scheduler.FilterScheduler
-
-RECLONE=yes
-
-
-[[post-config|/etc/neutron/neutron.conf]]
-
-[keystone_authtoken]
-admin_tenant_name = service
-admin_user = neutron
-admin_password = admin_pass
-
-
-[group_policy]
-policy_drivers=implicit_policy,resource_mapping,chain_mapping
-extension_drivers=proxy_group
-
-[servicechain]
-servicechain_drivers = simplechain_driver
-
-[node_composition_plugin]
-node_plumber = admin_owned_resources_apic_plumber
-node_drivers = nfp_node_driver
-
-[admin_owned_resources_apic_tscp]
-plumbing_resource_owner_user =  neutron
-plumbing_resource_owner_password =  admin_pass
-plumbing_resource_owner_tenant_name =  service
-
-[group_policy_implicit_policy]
-default_ip_pool = 11.0.0.0/8
-default_proxy_ip_pool = 192.169.0.0/16
-default_external_segment_name = default
-
-[device_lifecycle_drivers]
-drivers = haproxy, vyos
-
-[nfp_node_driver]
-is_service_admin_owned = True
-svc_management_ptg_name = svc_management_ptg
-
-
+#If you want to use image builder just comment bellow line 
+DISABLE_BUILD_IMAGE=True
