--- a/local.conf
+++ b/local.conf
@@ -22,5 +22,5 @@ ENABLE_NFP=True
 #e.g IMAGE_URLS+=http://192.168.6.1/images/cirros-0.3.0-x86_64-disk.img #image extenson should be .img OR img.gz
 #IMAGE_URLS+=
 
-#If you want to use image builder just comment bellow line 
+#If you want to use image builder just set follwing option to FALSE" 
 DISABLE_BUILD_IMAGE=True
