--- a/local.conf
+++ b/local.conf
@@ -16,11 +16,11 @@ SERVICE_TOKEN=admin
 HOST_IP=192.168.100.106
 
 enable_plugin gbp https://git.openstack.org/openstack/group-based-policy refs/changes/45/309145/25
-GBPSERVICE_BRANCH=refs/changes/45/309145/18
+GBPSERVICE_BRANCH=refs/changes/45/309145/25
 ENABLE_NFP=True
 
 #e.g IMAGE_URLS+=http://192.168.6.1/images/cirros-0.3.0-x86_64-disk.img #image extenson should be .img OR img.gz
 #IMAGE_URLS+=
 
-#If you want to use image builder just set follwing option to FALSE" 
+#If you want to use image builder just set follwing option to FALSE 
 DISABLE_BUILD_IMAGE=True
