--- a/local.conf
+++ b/local.conf
@@ -13,14 +13,14 @@ MYSQL_PASSWORD=openstack
 RABBIT_PASSWORD=openstack
 SERVICE_PASSWORD=admin_pass
 SERVICE_TOKEN=admin
-HOST_IP=192.168.100.106
+HOST_IP=
 
-enable_plugin gbp https://git.openstack.org/openstack/group-based-policy refs/changes/45/309145/25
-GBPSERVICE_BRANCH=refs/changes/45/309145/25
+enable_plugin gbp https://git.openstack.org/openstack/group-based-policy refs/changes/45/309145/26
+GBPSERVICE_BRANCH=refs/changes/45/309145/26
 ENABLE_NFP=True
 
 #e.g IMAGE_URLS+=http://192.168.6.1/images/cirros-0.3.0-x86_64-disk.img #image extenson should be .img OR img.gz
-#IMAGE_URLS+=
+IMAGE_URLS+=
 
-#If you want to use image builder just set follwing option to FALSE 
 DISABLE_BUILD_IMAGE=True
+
