--- a/local.conf
+++ b/local.conf
@@ -1,137 +1,124 @@
 [[local|localrc]]
-DEST=/opt/stack
-ConfiguratorQcow2Image=/home/stack/devstack/configurator
-VyosQcow2Image=/home/stack/devstack/vyos.qcow2
-EXT_NET_NAME=ext-net
-EXT_NET_SUBNET_NAME=ext-net-subnet
-EXT_NET_GATEWAY=192.168.102.254
-EXT_NET_ALLOCATION_POOL_START=192.168.102.81
-EXT_NET_ALLOCATION_POOL_END=192.168.102.90
-EXT_NET_CIDR=192.168.102.0
-EXT_NET_MASK=24
-#
-# Logging
-LOGFILE=$DEST/logs/stack.sh.log
-VERBOSE=True
-LOG_COLOR=False
-SCREEN_LOGDIR=$DEST/logs/screen
 
-# Credentials
-ADMIN_PASSWORD=admin_pass
-MYSQL_PASSWORD=openstack
-RABBIT_PASSWORD=openstack
-SERVICE_PASSWORD=admin_pass
-SERVICE_TOKEN=admin
-HOST_IP=192.168.100.107
+ENABLE_NFP=True
+NFP_DEVSTACK_MODE=base
 
-Q_PLUGIN=ml2
-Q_L3_ENABLED=True
-PUBLIC_INTERFACE=eth0
+# Edit NFP_DEVSTACK_MODE with either 'base' or 'advanced'
+if [[ $ENABLE_NFP = True ]]; then
 
-ENABLE_TENANT_VLANS=True
-TENANT_VLAN_RANGE=1100:2999
+    if [[ $NFP_DEVSTACK_MODE = advanced ]]; then
+        # External Network
+        EXT_NET_GATEWAY=
+        EXT_NET_ALLOCATION_POOL_START=
+        EXT_NET_ALLOCATION_POOL_END=
+        EXT_NET_CIDR=
 
-enable_service q-fwaas
-enable_service q-lbaas
-enable_plugin neutron-vpnaas https://git.openstack.org/openstack/neutron-vpnaas stable/liberty
+        # Configurator image path option, its optional
+        # If configured, install step uploads the specified image
+        # If not configured, install step will build a new one and upload it
+        ConfiguratorQcow2Image=
+        # Service VM image path options, they are optional
+        # If configured, install step uploads the specified images
+        # If not configured, install step ignores uploading these service images
+        VyosQcow2Image=
+        HaproxyQcow2Image=
+
+        # Make sure that your public interface is not attached to any bridge.
+        PUBLIC_INTERFACE=
+    fi
+fi
+
+DATABASE_PASSWORD=abc123
+ADMIN_PASSWORD=abc123
+MYSQL_PASSWORD=$DATABASE_PASSWORD
+RABBIT_PASSWORD=abc123
+SERVICE_PASSWORD=$ADMIN_PASSWORD
+SERVICE_TOKEN=abc123
 
 Q_SERVICE_PLUGIN_CLASSES=neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,group_policy,ncp
-#GIT_BASE=http://github.com
 
-GIT_BASE=git://git.openstack.org
+# Using group-policy branches
+# ---------------------------
 
-GBPSERVICE_REPO=https://github.com/oneconvergence/group-based-policy.git
-GBPSERVICE_BRANCH=nfp-integration
+GIT_BASE=http://github.com
 
+GBPSERVICE_REPO=${GIT_BASE}/openstack/group-based-policy.git
+GBPSERVICE_BRANCH=stable/liberty
+#GBPSERVICE_REPO=https://review.openstack.org/openstack/group-based-policy
+#GBPSERVICE_BRANCH=refs/changes/54/240954/51
 
 GBPCLIENT_REPO=${GIT_BASE}/openstack/python-group-based-policy-client.git
 GBPCLIENT_BRANCH=stable/liberty
+#GBPCLIENT_REPO=https://review.openstack.org/openstack/python-group-based-policy-client
+#GBPCLIENT_BRANCH=refs/changes/73/261773/2
 
 GBPUI_REPO=${GIT_BASE}/openstack/group-based-policy-ui.git
 GBPUI_BRANCH=stable/liberty
+#GBPUI_REPO=https://review.openstack.org/openstack/group-based-policy-ui
+#GBPUI_BRANCH=refs/changes/52/262852/2
 
 GBPHEAT_REPO=${GIT_BASE}/openstack/group-based-policy-automation.git
 GBPHEAT_BRANCH=stable/liberty
+#GBPHEAT_REPO=https://review.openstack.org/openstack/group-based-policy-automation
+#GBPHEAT_BRANCH=refs/changes/55/262855/1
 
-# Github's Branch
-GLANCE_BRANCH=stable/liberty
-HORIZON_BRANCH=stable/liberty
-KEYSTONE_BRANCH=stable/liberty
-KESYTONECLIENT_BRANCH=stable/liberty
-NOVA_BRANCH=stable/liberty
-NOVACLIENT_BRANCH=stable/liberty
-NEUTRON_BRANCH=stable/liberty
-HEAT_BRANCH=stable/liberty
-CEILOMETER_BRANCH=stable/liberty
-SWIFT_BRANCH=stable/liberty
-CINDER_BRANCH=stable/liberty
-enable_service n-cauth n-novnc 
-disable_service n-net tempest
-ENABLED_SERVICES+=,q-svc,q-agt,q-dhcp,q-l3,q-meta,q-metering,neutron
+# Enable neutron for group-policy-poc
+# -----------------------------------
+disable_service n-net
+enable_service n-novnc
+enable_service q-svc
+enable_service q-agt
+enable_service q-dhcp
+enable_service q-l3
+enable_service q-fwaas
+if [[ $ENABLE_NFP = True ]]; then
+    [[ $NFP_DEVSTACK_MODE = advanced ]] && enable_plugin neutron-vpnaas https://git.openstack.org/openstack/neutron-vpnaas stable/liberty
+fi
+enable_service q-lbaas
+enable_service q-meta
+enable_service neutron
+enable_service group-policy
+disable_service tempest
+ENABLED_SERVICES+=,heat,h-api,h-api-cfn,h-api-cw,h-eng
+if [[ $ENABLE_NFP = True ]]; then
+    # NFP services
+    enable_service nfp_orchestrator
+    enable_service nfp_proxy
+    enable_service nfp_proxy_agent
+    [[ $NFP_DEVSTACK_MODE = base ]] && enable_service nfp_base_configurator
+    [[ $NFP_DEVSTACK_MODE = advanced ]] && enable_service nfp_config_orchestrator
+fi
 
-enable_service  n-cpu n-api-meta n-metadata n-osapi_compute c-vol c-api n-api n-cert n-obj n-cond n-sch cinder c-bak
-enable_service group-policy,orchestrator,proxy,config_agent,config_agent_proxy
+OVS_PHYSICAL_BRIDGE=br-ex
 
-
-# Heat - Orchestration Service
-ENABLED_SERVICES+=,heat,h-api,h-api-cfn,h-api-cw,h-eng,heat-api-cloudwatch
-#HEAT_STANDALONE=True
-
-SWIFT_HASH=66a3d6b56c1f479c8b4e70ab5c2000f5
-
-SWIFT_REPLICAS=1
-
-SWIFT_DATA_DIR=$DEST/data
-
-
+DEST=/opt/stack
+SCREEN_LOGDIR=$DEST/logs/screen
+LOGFILE=$DEST/logs/stack.sh.log
 SKIP_EXERCISES=volumes,trove,swift,sahara,euca,bundle,boot_from_volume,aggregates,zaqar,client-env,neutron-adv-test,floating_ips,client-args,horizon,sec_groups,gbp_servicechain,gbp_heat
-[[post-config|/etc/neutron/fwaas_driver.ini]]
-[fwaas]
-driver = neutron_fwaas.services.firewall.drivers.linux.oc_noop_firewall_driver.oc_fwaas.NoOpFwaasDriver
 
+#OFFLINE=True
+
+# Group-based Policy configuration
+# Comment the lines below if you don't want to configure the datapath
+# and use the dummy driver.
+# Group-based Policy configuration
+# Comment the lines below if you don't want to configure the datapath
+# and use the dummy driver.
 [[post-config|/etc/nova/nova.conf]]
 [neutron]
 allow_duplicate_networks = True
+
 [[post-config|/etc/heat/heat.conf]]
 [DEFAULT]
 plugin_dirs=/opt/stack/gbpautomation/gbpautomation/heat
+
 [[post-config|/etc/neutron/neutron.conf]]
-
-[keystone_authtoken]
-admin_tenant_name = service
-admin_user = neutron
-admin_password = admin_pass
-
-
 [group_policy]
 policy_drivers=implicit_policy,resource_mapping,chain_mapping
 extension_drivers=proxy_group
 
 [servicechain]
 servicechain_drivers = simplechain_driver
-
-[node_composition_plugin]
-node_plumber = admin_owned_resources_apic_plumber
-node_drivers = nfp_node_driver
-
-[admin_owned_resources_apic_tscp]
-plumbing_resource_owner_user =  neutron
-plumbing_resource_owner_password =  admin_pass
-plumbing_resource_owner_tenant_name =  service
-
-[group_policy_implicit_policy]
-default_ip_pool = 11.0.0.0/8
-default_proxy_ip_pool = 192.169.0.0/16
-default_external_segment_name = default
-
-[device_lifecycle_drivers]
-drivers = haproxy, vyos
-
-
-
-[nfp_node_driver]
-is_service_admin_owned = True
-svc_management_ptg_name = svc_management_ptg
 
 [quotas]
 default_quota = -1
@@ -143,7 +130,32 @@ quota_security_group_rule = -1
 quota_router = -1
 quota_floatingip = -1
 
+if [[ $ENABLE_NFP = False ]]; then
+    [[post-config|/etc/neutron/neutron.conf]]
+    [node_composition_plugin]
+    node_plumber = stitching_plumber
+    node_drivers = heat_node_driver
+elif [[ $ENABLE_NFP = True ]] ; then
+    [[post-config|/etc/neutron/neutron.conf]]
+    [keystone_authtoken]
+    admin_tenant_name = service
+    admin_user = neutron
+    admin_password = $ADMIN_PASSWORD
+    
+    [node_composition_plugin]
+    node_plumber = admin_owned_resources_apic_plumber
+    node_drivers = nfp_node_driver
+    
+    [admin_owned_resources_apic_tscp]
+    plumbing_resource_owner_user = neutron
+    plumbing_resource_owner_password = $ADMIN_PASSWORD
+    plumbing_resource_owner_tenant_name = service
+    
+    [group_policy_implicit_policy]
+    default_external_segment_name = default
+    
+    [nfp_node_driver]
+    is_service_admin_owned = True
+    svc_management_ptg_name = svc_management_ptg
+fi
 
-SCHEDULER=nova.scheduler.filter_scheduler.FilterScheduler
-
-RECLONE=yes
