--- a/local.conf
+++ b/local.conf
@@ -130,32 +130,30 @@ quota_security_group_rule = -1
 quota_router = -1
 quota_floatingip = -1
 
-if [[ $ENABLE_NFP = False ]]; then
-    [[post-config|/etc/neutron/neutron.conf]]
-    [node_composition_plugin]
-    node_plumber = stitching_plumber
-    node_drivers = heat_node_driver
-elif [[ $ENABLE_NFP = True ]] ; then
-    [[post-config|/etc/neutron/neutron.conf]]
-    [keystone_authtoken]
-    admin_tenant_name = service
-    admin_user = neutron
-    admin_password = $ADMIN_PASSWORD
-    
-    [node_composition_plugin]
-    node_plumber = admin_owned_resources_apic_plumber
-    node_drivers = nfp_node_driver
-    
-    [admin_owned_resources_apic_tscp]
-    plumbing_resource_owner_user = neutron
-    plumbing_resource_owner_password = $ADMIN_PASSWORD
-    plumbing_resource_owner_tenant_name = service
-    
-    [group_policy_implicit_policy]
-    default_external_segment_name = default
-    
-    [nfp_node_driver]
-    is_service_admin_owned = True
-    svc_management_ptg_name = svc_management_ptg
-fi
+[[post-config-gbp|/etc/neutron/neutron.conf]]
+[node_composition_plugin]
+node_plumber = stitching_plumber
+node_drivers = heat_node_driver
+
+[[post-config-nfp|/etc/neutron/neutron.conf]]
+[keystone_authtoken]
+admin_tenant_name = service
+admin_user = neutron
+admin_password = $ADMIN_PASSWORD
+
+[node_composition_plugin]
+node_plumber = admin_owned_resources_apic_plumber
+node_drivers = nfp_node_driver
+
+[admin_owned_resources_apic_tscp]
+plumbing_resource_owner_user = neutron
+plumbing_resource_owner_password = $ADMIN_PASSWORD
+plumbing_resource_owner_tenant_name = service
+
+[group_policy_implicit_policy]
+default_external_segment_name = default
+
+[nfp_node_driver]
+is_service_admin_owned = True
+svc_management_ptg_name = svc_management_ptg
 
